lab-configuring-google-kubernetes-engine-networking/hello-allow-from-foo.yaml
# Network policy to allow ingress traffic from app=foo to app=hello

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-allow-from-foo
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: hello
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: foo
